Add <form> tag, insert js conditions

--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
 </head>
 
 <body>
-    <label for="km">Inserire il numero di Km da percorrere</label>
-    <input type="number" name="km" id="km">
-    <label for="age">Inserire l'età del passeggero</label>
-    <input type="number" name="age" id="user-age">
-    <button id="ticketbtn" class="btn">Invia</button>
+    <form action="">
+        <label for="km">Inserire il numero di Km da percorrere</label>
+        <input type="number" name="km" id="km">
+        <label for="age">Inserire l'età del passeggero</label>
+        <input type="number" name="age" id="user-age">
+        <button id="ticketbtn" class="btn">Invia</button>
+    </form>
+
+    <h1>Il prezzo del biglietto è:</h1>
+    <p id="price"></p>
 
 
     <script src="./script/script.js"></script>
