--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <form action="">
         <label for="km">Inserire il numero di Km da percorrere</label>
         <input type="number" name="km" id="km">
-        <label for="age">Inserire l'età del passeggero</label>
+        <label for="user-age">Inserire l'età del passeggero</label>
         <input type="number" name="age" id="user-age">
-        <button id="ticketbtn" class="btn">Invia</button>
+        <button id="ticketbtn" class="btn" type="button">Invia</button>
     </form>
 
     <h1>Il prezzo del biglietto è:</h1>
